bk_ida/gccida/c1/cselib_record_set
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/cselib_record_set/src/cselib.c:1689:25: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v9 = ( ( unsigned int)( mode_class_0[v8] - 5) < 2) + 1; 
                        ^~~~~~~~~~~~
                        mode_class
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/cselib_record_set/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/cselib_record_set/src/obj/cselib.o] Error 1
